--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat&display=swap');
 
 :root {
-    --color-primario: #000000;
+    --color-primario: #2b2828;
     --color-secundario: #F6F6F6;
     --color-terciario: #22D4FD;
     --color-hover: #272727;
